<resources>
    <string name="app_name">Bikeable</string>
    <string name="action_settings">Settings</string>
    <string name="action_iria_layers">Show Tel Aviv Bike Paths</string>
    <string name="action_iria_telOFun">Show Tel-O-Fun stations</string>
    <string name="action_iria_telOFun_matches">Show matches with Tel-O-Fun</string>
    <string name="from_text">Choose origin... (type to search)</string>
    <string name="action_iria_matches_layer">Show matches with Bike Paths</string>
    <string name="to_text">Choose destination... (type to search)</string>
    <string name="wait_curr_location">Please wait for navigation to start</string>
    <string name="nav_back_button">Back to Search results</string>
    <string name="exit_central_title">Exit Bikeable</string>
    <string name="exit_central_q">Are you sure you want to exit Bikeable?</string>
    <string name="exit_nav_title">Exit Navigation</string>
    <string name="exit_nav_q">Are you sure you want to exit navigation?</string>
    <string name="gps_lost_text">GPS signal lost</string>
    <string name="action_feedback">Send feedback</string>
    <string name="feedback_email">nnys.group@gmail.com</string>
    <string name="curr_location_primary_text">Current Location</string>
    <string name="curr_location_secondary_text">Your Current Location</string>
    <string name="action_uphill">Show Significant Uphills</string>
    <string name="history_val_sep">.@.@</string>
</resources>
